DDP-5923 prism dashboard

--- a/ddp-workspace/projects/ddp-angio/src/styles.scss
+++ b/ddp-workspace/projects/ddp-angio/src/styles.scss
@@ -2207,3 +2207,8 @@ input.mat-input-element {
 .mat-progress-bar-buffer {
     background-color: lightgray !important;
 }
+
+.ddp-subject-panel__text {
+    font-size: 15px;
+    line-height: 23px;
+}
