--- a/ddp-workspace/projects/ddp-testboston/src/app/components/enrollment/enrollment.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/enrollment/enrollment.component.html
@@ -1,6 +1,6 @@
 <main class="main">
     <section *ngIf="!showError" class="section">
-        <ddp-subject-panel></ddp-subject-panel>
+        <ddp-subject-panel [invitationId]="invitationId"></ddp-subject-panel>
     </section>
     <section class="section">
         <div class="content">
