--- a/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
@@ -6,16 +6,21 @@
     font-family: 'Nunito', sans-serif;
 
     &__text {
-        display: flex;
-        align-items: center;
         font-size: 18px;
         line-height: 28px;
-        margin: 0;
-        text-decoration: none !important;
     }
 
     &_inline {
         display: inline-block;
+    }
+}
+
+.ddp-admin-action-panel {
+    &__text {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        text-decoration: none !important;
     }
 }
 
@@ -27,8 +32,7 @@
     }
 }
 
-.admin-action-panel-container,
-.subject-panel-container {
+.admin-action-panel-container {
     max-width: 1450px;
     padding: 1rem 1.5625rem;
     display: flex;
@@ -38,11 +42,6 @@
 }
 
 @media only screen and (max-width: 710px) {
-    .subject-panel-container {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
     .ddp-admin-action-panel__text {
         margin: 0 0 10px 0;
     }
