Fix connected issues after renaming
 'id' => 'instanceGuid' in toolkit/activity.component

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/survey/survey.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/survey/survey.component.html
@@ -1,6 +1,6 @@
 <app-activity
   [studyGuid]="studyGuid"
-  [activityGuid]="id"
+  [activityGuid]="instanceGuid"
   [agreeConsent]="config.agreeConsent"
   (submit)="navigate($event)"
   (stickySubtitle)="showStickySubtitle($event)"
