--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -1,27 +1,41 @@
+<!--  TODO: Add i18n  -->
 <ddp-question-prompt [block]="block"></ddp-question-prompt>
-<div class="file-upload-content">
+<div class="file-upload-content" [ngClass]="{'readonly': readonly}">
     <input type="file" class="file-input"
            (change)="onFilesSelected($event.target.files)" #fileUpload>
 
     <div class="file-select">
-        <div class="drop-block" dropFileToUpload (filesDropped)="onFilesSelected($event)">
+        <div class="drop-block"
+             dropFileToUpload
+             (filesDropped)="!readonly && onFilesSelected($event)">
             <mat-icon class="upload-icon" color="primary">file_upload</mat-icon>
             <span class="drop-block-text">Drag files to upload</span>
         </div>
         <button mat-raised-button color="primary" class="upload-btn"
+                [disabled]="readonly"
                 (click)="fileUpload.click()">Choose file
             <mat-icon>attach_file</mat-icon>
         </button>
 
+        <div class="selected-file">{{selectedFile?.name}}</div>
+
+        <button *ngIf="!readonly"
+                mat-raised-button color="primary"
+                class="submit-btn"
+                [disabled]="!isFileSelected"
+                (click)="uploadFile()">{{uploadedFile?.isUploaded? 'Reupload' : 'Submit'}}
+        </button>
     </div>
-    <div class="file-info">
-        <span class="file-name">{{file?.name || 'No file uploaded'}}</span>
+
+    <div class="uploaded-file">
+        <div class="title">Uploaded:</div>
+
+        <mat-chip-list>
+            <mat-chip *ngIf="uploadedFile?.isUploaded"
+                      color="primary" selected
+                      (removed)="removeUploadedFile()">{{uploadedFile.name}} (size: {{uploadedFile.size}})
+                <mat-icon matChipRemove *ngIf="!readonly">cancel</mat-icon>
+            </mat-chip>
+        </mat-chip-list>
     </div>
 </div>
-
-<button mat-raised-button color="primary"
-        class="submit-btn"
-        [disabled]="!isFileSelected"
-        (click)="uploadFile()"
->Submit
-</button>
