--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
@@ -1,5 +1,22 @@
+$drop-block-color: whitesmoke;
+$drop-block-active-color: lightyellow;
+
 .file-upload-content {
     display: flex;
+    flex-wrap: wrap;
+}
+
+.file-upload-content.readonly {
+    opacity: 0.7;
+
+    .drop-block {
+        background-color: $drop-block-color;
+        cursor: not-allowed;
+    }
+
+    .upload-icon {
+        color: grey;
+    }
 }
 
 .file-select {
@@ -9,22 +26,23 @@
 .drop-block {
     width: 200px;
     height: 150px;
+    margin-right: 20px;
     border: 1px dashed grey;
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: $drop-block-color;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
 
-.drop-block.file-over {
-    background-color: lightyellow;
-}
+    &.file-over {
+        background-color: $drop-block-active-color
+    }
 
-.upload-icon {
-    font-size: 48px;
-    width: auto;
-    height: auto;
+    .upload-icon {
+        font-size: 48px;
+        width: auto;
+        height: auto;
+    }
 }
 
 .upload-btn {
@@ -40,6 +58,6 @@
 }
 
 .submit-btn {
-    margin: 20px 0;
+    margin: 10px;
     float: right;
 }
