DDP-5875 fix home button visibility

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -78,6 +78,9 @@
       line-height: 3.2rem!important;
       text-shadow: none;
       padding: 0!important;
+      &_active {
+        display: none;
+      }
     }
   }
 }
