--- a/ddp-workspace/projects/ddp-crc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-crc/src/app/components/header/header.component.scss
@@ -7,6 +7,7 @@
   background: #ffffff;
 
   transition: box-shadow 0.2s ease;
+  z-index: 100;
 
   &--sticky {
     box-shadow: 0 0.2rem 2rem 0 rgba(0, 0, 0, 0.2);
