--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.scss
@@ -1,30 +1,27 @@
 $dialog-arrow-width: 20px;
 $dialog-arrow-half-width: $dialog-arrow-width / 2;
 
-.activity-block {
+.confirm-dialog {
+    display: flex;
+    flex-flow: column;
 
-    &__delete-dialog {
-        display: flex;
-        flex-flow: column;
+    &-title {
+        color: var(--modal-activity-block-title-color, #1D1B25);
+        font-size: 18px;
+        letter-spacing: 0;
+        text-align: center;
+        margin-bottom: 15px;
+        white-space: pre-line;
+    }
 
-        &-title {
-            color: var(--modal-activity-block-title-color, #1D1B25);
-            font-size: 18px;
-            letter-spacing: 0;
-            text-align: center;
-            margin-bottom: 15px;
-            white-space: pre-line;
-        }
+    &-buttons {
+        display: inline-flex;
+        align-self: center;
+        gap: var(--modal-activity-block-delete-dialog-button-gap, 16px);
 
-        &-buttons {
-            display: inline-flex;
-            align-self: center;
-            gap: var(--modal-activity-block-delete-dialog-button-gap, 16px);
-
-            & > button {
-                height: var(--modal-activity-block-delete-dialog-button-height, 40px);
-                width: var(--modal-activity-block-delete-dialog-button-width, 9rem);
-            }
+        & > button {
+            height: var(--modal-activity-block-delete-dialog-button-height, 40px);
+            width: var(--modal-activity-block-delete-dialog-button-width, 9rem);
         }
     }
 }
@@ -63,7 +60,7 @@ $dialog-arrow-half-width: $dialog-arrow-width / 2;
         }
     }
 
-    .delete-btn {
+    .confirm-btn {
         border: 0.5px solid transparent !important;
     }
 
