--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -19,11 +19,11 @@
 
         <div class="selected-file">{{selectedFile?.name}}</div>
 
-        <button *ngIf="!readonly"
+        <button *ngIf="!readonly" #uploadBtn
                 mat-raised-button color="primary"
                 class="submit-btn"
                 [disabled]="!isFileSelected"
-                (click)="uploadFile()">{{uploadedFile?.isUploaded? 'Reupload' : 'Submit'}}
+                (click)="submitFileUpload()">{{uploadedFile?.isUploaded? 'Reupload' : 'Submit'}}
         </button>
     </div>
 
@@ -33,8 +33,8 @@
         <mat-chip-list>
             <mat-chip *ngIf="uploadedFile?.isUploaded"
                       color="primary" selected
-                      (removed)="removeUploadedFile()">{{uploadedFile.name}} (size: {{uploadedFile.size}})
-                <mat-icon matChipRemove *ngIf="!readonly">cancel</mat-icon>
+                      (removed)="undoUploadedFile()">{{uploadedFile.name}} (size: {{uploadedFile.size}})
+                <mat-icon matChipRemove *ngIf="!readonly" #undoUploadBtn>cancel</mat-icon>
             </mat-chip>
         </mat-chip-list>
     </div>
