DDP-5926 replace separate inputs in subject panel with one user interface input

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -143,5 +143,9 @@
         <mat-spinner color="primary" diameter="30"></mat-spinner>
     </ng-template>
 </div>
-<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10" [pageSizeOptions]="[10, 25, 100]">
+<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10"
+               [pageSizeOptions]="[10, 25, 100]"
+               [pageIndex]="initialPageIndex"
+               [pageSize]="initialPageSize"
+               (page)="updatePageDataInStorage($event)">
 </mat-paginator>
