CRC: Implement home page scrolling to sections

--- a/ddp-workspace/projects/ddp-crc/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-crc/src/app/components/footer/footer.component.html
@@ -14,19 +14,19 @@
           </li>
 
           <li class="links__list-item">
-            <a class="links__link" [routerLink]="Route.About">
+            <a class="links__link" [routerLink]="Route.Home" fragment="about">
               {{ 'Footer.Circadia.About' | translate }}
             </a>
           </li>
 
           <li class="links__list-item">
-            <a class="links__link" [routerLink]="Route.FAQ">
+            <a class="links__link" [routerLink]="Route.Home" fragment="faq">
               {{ 'Footer.Circadia.FAQ' | translate }}
             </a>
           </li>
 
           <li class="links__list-item">
-            <a class="links__link" [routerLink]="Route.Team">
+            <a class="links__link" [routerLink]="Route.Home" fragment="team">
               {{ 'Footer.Circadia.Team' | translate }}
             </a>
           </li>
