--- a/ddp-workspace/projects/ddp-crc/src/app/components/pages/home/home.component.html
+++ b/ddp-workspace/projects/ddp-crc/src/app/components/pages/home/home.component.html
@@ -16,7 +16,7 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section" id="about">
   <div class="content-container">
     <h2>
       {{ 'HomePage.About.Title' | translate }}
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-<section class="section section--grey">
+<section class="section section--grey" id="participation">
   <div class="content-container">
     <h2>
       {{ 'HomePage.Participation.Title' | translate }}
@@ -72,7 +72,7 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section" id="faq">
   <div class="content-container">
     <h2 class="text-center mb-2">
       {{ 'HomePage.FAQ.Title' | translate }}
@@ -98,7 +98,7 @@
   </div>
 </section>
 
-<section class="section section--grey">
+<section class="section section--grey" id="team">
   <div class="content-container">
     <h2>
       {{ 'HomePage.Team.Title' | translate }}
