--- a/ddp-workspace/projects/ddp-crc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-crc/src/app/components/header/header.component.scss
@@ -1,8 +1,12 @@
 @import '../../../styles/variables';
 
 .header {
-  position: sticky;
+  width: 100%;
+  height: 10rem;
+
+  position: fixed;
   top: 0;
+  left: 0;
 
   background: #ffffff;
 
@@ -18,14 +22,16 @@
     align-items: center;
 
     max-width: 140rem;
+    height: 100%;
 
     margin: 0 auto;
-    padding: 1.6rem 2.4rem 2.6rem;
+    padding: 0 2.4rem;
   }
 
   &__logo {
     height: 6rem;
 
+    margin-top: -1rem;
     margin-right: 4rem;
   }
 
@@ -36,8 +42,6 @@
   &__nav {
     display: flex;
     align-items: center;
-
-    padding-top: 1rem;
 
     &--left {
       margin-right: auto;
