DDP-5875 fix header buttons visibility

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
@@ -25,12 +25,12 @@
           }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item__link" [routerLink]="Route.AboutUs">{{
+          <a routerLinkActive="nav-item__link_active" class="nav-item__link" [routerLink]="Route.AboutUs">{{
             'Header.Links.AboutUs' | translate
           }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-item__link" [routerLink]="Route.LearnMore">{{
+          <a routerLinkActive="nav-item__link_active" class="nav-item__link" [routerLink]="Route.LearnMore">{{
             'Header.Links.LearnMore' | translate
           }}</a>
         </li>
