Rename after code-review

--- a/ddp-workspace/projects/ddp-mbc/src/app/components/data-release/data-release.component.html
+++ b/ddp-workspace/projects/ddp-mbc/src/app/components/data-release/data-release.component.html
@@ -173,7 +173,7 @@
                                     <span translate>Toolkit.DataRelease.Appendices.AppendicesList.Item1.Text</span>
                                 </li>
                                 <li class="PageContent-text PageContent-text-list">
-                                    <a [href]="currentLanguage === 'es' ? 'AboutYouSurveySpanish.pdf' : 'AboutYouSurveyV2.pdf'"
+                                    <a [href]="currentLanguage === 'es' ? 'AboutYouSurvey_es.pdf' : 'AboutYouSurvey_en.pdf'"
                                        target="_blank" class="Link" translate>Toolkit.DataRelease.Appendices.AppendicesList.Item2.Link</a>
                                     <span translate>Toolkit.DataRelease.Appendices.AppendicesList.Item2.Text</span>
                                 </li>
