--- a/ddp-workspace/projects/study-builder-ui/src/app/components/static-content-block-editor/static-content-block-editor.component.html
+++ b/ddp-workspace/projects/study-builder-ui/src/app/components/static-content-block-editor/static-content-block-editor.component.html
@@ -1,8 +1,9 @@
 <form [formGroup]="formGroup" class="container">
     <editor
+            apiKey="usc880k68ccggfo9v1x2qc4u3b0ld8lq1dqzvgqot7596n0o"
             [init]="editorInit()"
             [initialValue]="initialContent()"
-            (onChange)="onContentChange($event)">
+            formControlName="body">
     </editor>
     <div>
         <mat-form-field>
@@ -12,3 +13,4 @@
         </mat-form-field>
     </div>
 </form>
+
