--- a/ddp-workspace/projects/ddp-circadia/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_common.scss
@@ -19,3 +19,17 @@ app-home {
     }
   }
 }
+
+.container {
+  max-width: 728px;
+
+  margin: 0 auto;
+  padding: 0 2.4rem;
+}
+
+.content-container {
+  max-width: 728px;
+
+  margin: 0 auto;
+  padding: 9rem 2.4rem;
+}
