DDP-6144 add second paginator at the top of the table

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -25,6 +25,9 @@
         </p>
     </ng-container>
 </div>
+<mat-paginator (page)="syncPaginators($event)"
+               [pageSize]="paginator.pageSize" [pageIndex]="paginator.pageIndex"
+               [length]="paginator.length" [pageSizeOptions]="paginator.pageSizeOptions"></mat-paginator>
 <div class="table-container">
     <mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="userName">
