Add validation for fileAnswer

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
@@ -1,6 +1,10 @@
 $drop-block-color: whitesmoke;
 $drop-block-active-color: lightyellow;
 
+.file-requirements {
+    margin-bottom: 10px;
+}
+
 .file-upload-content {
     display: flex;
     flex-wrap: wrap;
