--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -119,11 +119,12 @@
                 {{'SDK.Prism.TableColumns.DashboardLink' | translate}}
             </mat-header-cell>
             <mat-cell *matCellDef="let element" class="dashboard-column">
-                <button mat-stroked-button
-                        (click)="clickOnUser(element)"
-                        [attr.aria-label]="'SDK.Prism.DashboardButtonLabel' | translate : { user: getUserLabel(element) }">
+                <a mat-stroked-button
+                   class="dashboard-link"
+                   [routerLink]="'/' + dashboardRoute + '/' + element.guid"
+                   [attr.aria-label]="'SDK.Prism.DashboardButtonLabel' | translate : { user: getUserLabel(element) }">
                     {{'SDK.Prism.DashboardButton' | translate}}
-                </button>
+                </a>
             </mat-cell>
         </ng-container>
 
@@ -142,5 +143,9 @@
         <mat-spinner color="primary" diameter="30"></mat-spinner>
     </ng-template>
 </div>
-<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10" [pageSizeOptions]="[10, 25, 100]">
+<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10"
+               [pageSizeOptions]="[10, 25, 100]"
+               [pageIndex]="initialPageIndex"
+               [pageSize]="initialPageSize"
+               (page)="updatePageDataInStorage($event)">
 </mat-paginator>
