--- a/ddp-workspace/projects/ddp-circadia/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_variables.scss
@@ -1,9 +1,11 @@
 $color-blue-1: #0b1245;
 $color-blue-2: #182b67;
-$color-blue-3: #355FAC;
+$color-blue-3: #355fac;
 $color-blue-4: #4575db;
 
 $color-yellow-1: #eec45c;
+
+$color-error: #f44336;
 
 $color-font-dark: #282828;
 $color-font-light: #ffffff;
