--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -25,9 +25,13 @@
         </p>
     </ng-container>
 </div>
-<mat-paginator (page)="syncPaginators($event)"
-               [pageSize]="paginator.pageSize" [pageIndex]="paginator.pageIndex"
-               [length]="paginator.length" [pageSizeOptions]="paginator.pageSizeOptions"></mat-paginator>
+<mat-paginator #paginator
+               [hidden]="isSearchLoading || dataSource.data.length <= 10"
+               [pageSizeOptions]="[10, 25, 100]"
+               [pageIndex]="initialPageIndex"
+               [pageSize]="initialPageSize"
+               (page)="updatePageDataInStorage($event)">
+</mat-paginator>
 <div class="table-container">
     <mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="userName">
@@ -147,8 +151,9 @@
     </ng-template>
 </div>
 <mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10"
-               [pageSizeOptions]="[10, 25, 100]"
-               [pageIndex]="initialPageIndex"
-               [pageSize]="initialPageSize"
-               (page)="updatePageDataInStorage($event)">
+               [pageSizeOptions]="paginator.pageSizeOptions"
+               [pageIndex]="paginator.pageIndex"
+               [pageSize]="paginator.pageSize"
+               [length]="paginator.length"
+               (page)="syncPaginators($event);">
 </mat-paginator>
