--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -26,8 +26,8 @@
     </ng-container>
 </div>
 <mat-paginator #paginator
-               [hidden]="isSearchLoading || dataSource.data.length <= 10"
-               [pageSizeOptions]="[10, 25, 100]"
+               [hidden]="isPaginationHidden"
+               [pageSizeOptions]="paginationSizes"
                [pageIndex]="initialPageIndex"
                [pageSize]="initialPageSize"
                (page)="updatePageDataInStorage($event)">
@@ -150,7 +150,7 @@
         <mat-spinner color="primary" diameter="30"></mat-spinner>
     </ng-template>
 </div>
-<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10"
+<mat-paginator [hidden]="isPaginationHidden"
                [pageSizeOptions]="paginator.pageSizeOptions"
                [pageIndex]="paginator.pageIndex"
                [pageSize]="paginator.pageSize"
