--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -25,6 +25,13 @@
         </p>
     </ng-container>
 </div>
+<mat-paginator #paginator
+               [hidden]="isPaginationHidden"
+               [pageSizeOptions]="paginationSizes"
+               [pageIndex]="initialPageIndex"
+               [pageSize]="initialPageSize"
+               (page)="updatePageDataInStorage($event)">
+</mat-paginator>
 <div class="table-container">
     <mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="userName">
@@ -143,9 +150,10 @@
         <mat-spinner color="primary" diameter="30"></mat-spinner>
     </ng-template>
 </div>
-<mat-paginator [hidden]="isSearchLoading || dataSource.data.length <= 10"
-               [pageSizeOptions]="[10, 25, 100]"
-               [pageIndex]="initialPageIndex"
-               [pageSize]="initialPageSize"
-               (page)="updatePageDataInStorage($event)">
+<mat-paginator [hidden]="isPaginationHidden"
+               [pageSizeOptions]="paginator.pageSizeOptions"
+               [pageIndex]="paginator.pageIndex"
+               [pageSize]="paginator.pageSize"
+               [length]="paginator.length"
+               (page)="syncPaginators($event);">
 </mat-paginator>
