--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
@@ -108,6 +108,13 @@ h3 {
     background: #ffffff;
   }
 
+  &__img {
+    display: block;
+
+    width: 100%;
+    height: 100%;
+  }
+
   &__name {
     margin-bottom: 1.25rem;
 
