Fix code-review comments

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -6,7 +6,7 @@
     <div class="file-types" *ngIf="fileMimeTypes.length">Allowed mime-types: {{fileMimeTypes.join(', ')}}</div>
 </div>
 
-<div class="file-upload-content" [ngClass]="{'readonly': readonly}">
+<div class="file-upload-content" [class.readonly]="readonly">
     <input type="file" class="file-input"
            [accept]="fileMimeTypes.join(',')"
            (change)="onFilesSelected($event.target.files)" #fileUpload>
