--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -30,7 +30,7 @@
                 mat-raised-button color="primary"
                 class="submit-btn"
                 [disabled]="!isFileSelected"
-                (click)="submitFileUpload()">{{uploadedFile?.isUploaded? 'Reupload' : 'Submit'}}
+                (click)="submitFileUpload()">{{uploadedFile?.isUploaded? 'Reupload' : 'Upload'}}
         </button>
     </div>
 
