--- a/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
@@ -1,5 +1,15 @@
 @import 'variables';
 
+.SimpleButton {
+  color: #fff;
+  font-size: 19px;
+  line-height: 3.2rem;
+  text-shadow: none;
+  padding: 0;
+  background: 0;
+  border: 0;
+}
+
 .button {
   display: inline-block;
 
