--- a/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
@@ -72,6 +72,14 @@
 
     font-size: 1.75rem;
     font-weight: bold;
+
+    .paragraph {
+      margin: 0.5em 0;
+
+      font-size: 1.5rem;
+
+      opacity: 0.8;
+    }
   }
 
   .mat-radio-group {
