--- a/ddp-workspace/projects/ddp-circadia/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $color-blue-4: #4575db;
 $color-yellow-1: #eec45c;
 
 $color-error: #f44336;
+$color-success: #57c457;
 
 $color-font-dark: #282828;
 $color-font-light: #ffffff;
