sign-in-page-added

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -61,7 +61,7 @@
     }
   }
   &-collapse.collapsing, &-collapse.in {
-    background: rgba(0,0,0,.4);
+    background: #26355c;
   }
   &-logo img {
     margin-top: 5px;
