--- a/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
@@ -3,28 +3,23 @@
 .button {
   display: inline-block;
 
-  padding: 10px 20px 8px 20px !important;
-
+  border-radius: 5px;
+  padding: 7px 50px;
   font-weight: 600;
   font-size: 1rem;
   line-height: 1.4rem;
   text-align: center;
   text-decoration: none !important;
-
+  border: none;
   border-radius: 2px;
   outline: none;
-
+  font-weight: 400;
   transition: all 0.5s ease;
   cursor: pointer;
 
   &:disabled {
     opacity: 0.8;
-
     cursor: not-allowed;
-  }
-
-  &:hover {
-    box-shadow: 2px 2px 0 #9e9e9e !important;
   }
 
   &--primary {
@@ -43,5 +38,28 @@
 
   &--lg {
     padding: 15px 22px !important;
+  }
+
+  &--sm {
+    padding: 1.4rem 2.6rem;
+    border-radius: 10px;
+    font-size: 1.6rem;
+  }
+
+  &--blue {
+    background: $button-background;
+
+    color: $button-color;
+
+    &:not(:disabled) {
+      &:hover,
+      &:focus {
+        background: lighten($button-background, 5%);
+      }
+
+      &:active {
+        background: lighten($button-background, 10%);
+      }
+    }
   }
 }
