--- a/ddp-workspace/projects/ddp-cgc/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_variables.scss
@@ -7,3 +7,7 @@ $color-light-grey-2: #eeeeee;
 $color-dark-grey: #7a7a7a;
 
 $color-text: #333333;
+
+
+$button-background: #3360ab;
+$button-color: #fff;
