DDP-5914 Set correct email

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
   <div _ngcontent-c2="" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt10">
       <p _ngcontent-c2="" class="footer-text">
           <span _ngcontent-c2="" class="medium">Contact Us</span><br _ngcontent-c2="">
-          <span _ngcontent-c2="" class="light">cancergenomecollective@broadinstitute.org<br>651-229-5806</span>
+          <span _ngcontent-c2="" class="light">info@cancercollective.org<br>651-229-5806</span>
       </p>
   </div>
   <div _ngcontent-c2="" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt10">
